[package]
name = "ig"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1"
reqwest = { version = "^0.11", default-features = false, features = ["json", "rustls-tls"] }
http = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
dotenv = "^0.15"
tokio = { version = "^1.28", features = ["macros"] }


[dev-dependencies]
tokio = { version = "^1.28", features = ["rt"] }
